tests/parser/parse-while-let.2.bad.error
error: Malformed while-let expression
  --> test:4:30
   |
 4 |  (define f (while-let (Some x)))
   |                               ^ expected =
